deps/crates/vendor/quote/tests/ui/not-repeatable.rs
use quote::quote;

struct Ipv4Addr;

fn main() {
    let ip = Ipv4Addr;
    let _ = quote! { #(#ip)* };
}
